finishes up the api
